--- a/arch/arm/mach-sun4i/Kconfig
+++ b/arch/arm/mach-sun4i/Kconfig
@@ -1,6 +1,6 @@
 if ARCH_SUN4I
 
-comment "Allwinner A1x options"
+comment "Allwinner A10 options"
 
 config TEGRA_FPGA
 	bool "FPGA Express support"
